--- a/BeardedManStudios/BeardedManStudios.csproj
+++ b/BeardedManStudios/BeardedManStudios.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BeardedManStudios</RootNamespace>
     <AssemblyName>BeardedManStudios</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -52,7 +52,10 @@
     <Compile Include="Source\BeardedMath.cs" />
     <Compile Include="Source\BMSByte.cs" />
     <Compile Include="Source\BMSExtensions.cs" />
+    <Compile Include="Source\Forge\Networking\HostResolver.cs" />
     <Compile Include="Source\Forge\Networking\IUserAuthenticator.cs" />
+    <Compile Include="Source\Forge\Networking\LocalNetworkScanning.cs" />
+    <Compile Include="Source\Forge\Networking\NetworkInterfaceAccumulator.cs" />
     <Compile Include="Source\GridLocation.cs" />
     <Compile Include="Source\Forge\DataStore\Cache.cs" />
     <Compile Include="Source\Forge\Logging\BMSLog.cs" />
@@ -104,7 +107,6 @@
     <Compile Include="Source\Forge\Networking\SteamP2PServer.cs" />
     <Compile Include="Source\Forge\Networking\TCPClient.cs" />
     <Compile Include="Source\Forge\Networking\TCPClientBase.cs" />
-    <Compile Include="Source\Forge\Networking\TCPClientWebsockets.cs" />
     <Compile Include="Source\Forge\Networking\TCPMasterClient.cs" />
     <Compile Include="Source\Forge\Networking\TCPServer.cs" />
     <Compile Include="Source\Forge\Networking\Time.cs" />
@@ -121,6 +123,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\BufferManager.cs" />
     <Compile Include="Source\Concurrency.cs" />
+    <Compile Include="Source\Logging\ForgeLogger.cs" />
     <Compile Include="Source\SimpleJSON.cs" />
     <Compile Include="Source\Threading\IThreadRunner.cs" />
     <Compile Include="Source\Threading\Task.cs" />
