Add circleci to build executable automatically.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,20 @@
- version: 2.1
+version: 2.1
 
- orbs:
+orbs:
   win: circleci/windows@2.2.0
 
- jobs:
-   build:
-     executor: win/default     
-     filter:
-      branches:
-        only: feature/next
-    
-     steps:
-       - checkout
-       - run: dotnet build
+jobs:
+  build:
+    executor: win/default
+
+    steps:
+      - checkout
+      - run: dotnet build
+
+workflows:
+  main:
+    jobs:
+      - build:
+        filter:
+          branches:
+            only: feature/next
