--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,6 @@ workflows:
   main:
     jobs:
       - build:
-          filter:
+          filters:
             branches:
               only: feature/next
