--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,19 +9,53 @@ jobs:
 
     steps:
       - checkout
+      - run: mkdir -p artifacts
       - run:
           working_directory: ./MasterServer
           command: dotnet restore
       - run:
           working_directory: ./MasterServer
-          command: dotnet publish -c Release -o /tmp/artifacts --no-restore
-      - store_artifacts:
-          path: /tmp/artifacts
+          command: dotnet publish -c Release -o ../artifacts --no-restore
+
+      - persist_to_workspace:
+          root: ../artifacts
+          paths:
+            - ./*
+
+  publish-github-release:
+      docker:
+        - image: circleci/golang:1.9
+
+      steps:
+        - attach_workspace:
+            at: ./artifacts
+
+        - run: go get -u github.com/tcnksm/ghr
+        - run: go get -u github.com/stevenmatthewt/semantics
+
+        - run:
+            name: Package and push release
+            working_directory: ./artifacts
+            command: |
+              tag=$(semantics --output-tag)
+              if [ "$tag" ]; then
+                  tar -czvf masterserver-{$tag}.gz .
+
+                  ghr -t $GITHUN_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace $tag masterserver-{$tag}.gz
+              else
+                echo "The commit message(s) did not indicate a major/minor/patch version."
+              fi
 
 workflows:
   main:
     jobs:
       - build:
+          filters:
+            branches:
+              only: feature/next
+      - publish-github-release:
+          requires:
+            - build
           filters:
             branches:
               only: feature/next
