--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,8 @@ jobs:
       docker:
         - image: circleci/golang:1.9
 
+      working_directory: /go/src/github.com/PirateCatStudios/fnr-masterserver
+
       steps:
         - checkout
         - attach_workspace:
