Fix release title naming.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
                   tar czvf ./masterserver-{$CIRCLE_TAG}.gz ./artifacts/*
 
                   ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME \
-                  -r $CIRCLE_PROJECT_REPONAME -n MasterServer-{$CIRCLE_TAG} --replace \
+                  -r $CIRCLE_PROJECT_REPONAME -n MasterServer-$CIRCLE_TAG --replace \
                   $CIRCLE_TAG masterserver-{$CIRCLE_TAG}.gz
               else
                 echo "Missing CIRCLE_TAG env var!"
