Make two workflows. One to build branch. One to build and release tag.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,11 @@ workflows:
       - build:
           filters:
             branches:
-              only: features/next
+              only: feature/next
+  main-release:
+    jobs:
+      - build:
+          filters:
             tags:
               only: /^(\d|[1-9]\d*)\.(\d|[1-9]\d*)\.(\d|[1-9]\d*)(-(0|[1-9A-Za-z-][0-9A-Za-z-]*|[0-9]*[A-Za-z-][0-9A-Za-z-]*)(\.(0|[1-9A-Za-z-][0-9A-Za-z-]*|[0-9]*[A-Za-z-][0-9A-Za-z-]*))*)?(\+[0-9A-Za-z-]+(\.[0-9A-Za-z-]+)*)?$/
       - publish-github-release:
